handle invalid status enum on exception